--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,2 +1,12 @@
 name: A workflow for my Hello World file
 on: push
+
+jobs:
+  build:
+    name: Hello world action
+    runs-on: ubuntu-latest
+    steps:
+      - usess: actions/checkout@v1
+      - users: ./action-a
+        with:
+          MY_NAME: "Tom"
