--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   comment:
-    if: context.comment.body == /*
+    if: github.event.comment.body == /*
     runs-on: ubuntu-latest
     steps:
       - uses: actions/github-script@v3
