--- a/run-cypress/action.yml
+++ b/run-cypress/action.yml
@@ -3,10 +3,10 @@ description: "Run a JavaScript file with Cypress"
 author: "tomdaly"
 
 inputs:
-  PARAM:
-    description: "Test param"
-    required: false
-    default: "index.html"
+  COMMENT:
+    description: "Comment containing optional route"
+    required: true
+    default: "/screenshot"
 
 runs:
   using: "docker"
