Use cypress/base image

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./run-cypress
         with:
-          COMMENT: github.event.comment.body
+          COMMENT: ${{github.event.comment.body}}
       - uses: actions/github-script@v3
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
