--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: '⌛ Getting your screenshot...'
-            })
+            });
       - uses: actions/checkout@v2
       - uses: ./run-cypress
         with:
@@ -27,9 +27,9 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            await github.issues.updateComment({
+            github.issues.updateComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              comment_id: steps.create-comment.outputs.result.id,
+              comment_id: ${{steps.create-comment.outputs.result.id}},
               body: '📸 Here's your screenshot @' + context.sender.login + ' <br/>![screenshot](https://tomdaly-gh-actions-test.s3-eu-west-1.amazonaws.com/screenshot.png)'
-            })
+            });
