--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,9 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            console.log(${{steps.create-comment.outputs.result}});
             github.issues.updateComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              comment_id: ${{steps.create-comment.outputs.result.id}},
+              comment_id: ${{steps.create-comment.outputs.result.data.id}},
               body: '📸 Here's your screenshot @' + context.sender.login + ' <br/>![screenshot](https://tomdaly-gh-actions-test.s3-eu-west-1.amazonaws.com/screenshot.png)'
             });
