--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,9 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
+            console.log(${{steps.create-comment.outputs.result}});
+            console.log(${{steps.create-comment.outputs.result.data}});
+            console.log(${{steps.create-comment.outputs.result.data.id}});
             github.issues.updateComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
