--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,11 +29,12 @@ jobs:
           script: |
             console.log(${{steps.create-comment.outputs.result}});
             console.log(${{steps.create-comment.outputs.result.status}});
+            console.log(JSON.parse(${{steps.create-comment.outputs.result}}));
             console.log(JSON.parse(${{steps.create-comment.outputs.result.data}}));
-            console.log(JSON.parse(${{steps.create-comment.outputs.result.data.id}}));
+            console.log(JSON.parse(${{steps.create-comment.outputs.result}}).data.id);
             github.issues.updateComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              comment_id: ${{steps.create-comment.outputs.result.data.id}},
+              comment_id: JSON.parse(${{steps.create-comment.outputs.result}}).data.id,
               body: '📸 Here's your screenshot @' + context.sender.login + ' <br/>![screenshot](https://tomdaly-gh-actions-test.s3-eu-west-1.amazonaws.com/screenshot.png)'
             });
