--- a/run-cypress/action.yml
+++ b/run-cypress/action.yml
@@ -6,6 +6,15 @@ inputs:
   COMMENT:
     description: "Comment containing optional route"
     required: true
+  COMMENT_ID:
+    description: "Comment ID for screenshot filename"
+    required: true
+  S3_ACCESS_KEY:
+    description: "S3 access key"
+    required: true
+  S3_SECRET_KEY:
+    description: "S3 secret key"
+    required: true
 
 runs:
   using: "docker"
