--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./run-cypress
         with:
-          COMMENT: ${{github.event.comment.body}}
-          COMMENT_ID: ${{steps.create-comment.outputs.result.data.id}}
-          S3_ACCESS_KEY: ${{secrets.S3_ACCESS_KEY}}
-          S3_SECRET_KEY: ${{secrets.S3_SECRET_KEY}}
+          comment: ${{github.event.comment.body}}
+          comment_id: ${{github.event.comment.id}}
+          s3_access_key: ${{secrets.S3_ACCESS_KEY}}
+          s3_secret_key: ${{secrets.S3_SECRET_KEY}}
       - uses: actions/github-script@v3
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
